<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gongcheng</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="yishengdenglu">医生登陆</string>
    <string name="denglu">登陆</string>
    <string name="yonghuming">用户名:</string>
    <string name="mima">密&#160;&#160;&#160;&#160;码:</string>
    <string name="zidongdenglu">自动登录</string>
    <string name="jizhumima">记住密码</string>

    
</resources>